# five-level-explainer

./: .env.template  .gitignore  README.md  crewai_flow.html  pyproject.toml
_site/about/: index.html
docs/: 2024-11-21-how-are-microchips-made.md  2024-11-21-understanding-gravity-a-5-level-guide.md  2024-11-21-understanding-trains-a-5-level-guide.md  2024-11-21-why-do-dogs-have-wet-noses.md  2024-11-22-how-to-buy-a-house-a-5-level-guide.md  2024-11-27-premium-and-discount-reporting-of-publicly-issued-debt-securities.md  2024-11-28-how-to-structure-a-musical-a-5-level-guide.md  Gemfile  _config.yml  about.markdown
docs/_includes/: custom-head.html
docs/_posts/: 2024-11-21-how-are-microchips-made.md  2024-11-21-the-theory-of-relativity-a-5-level-guide.md  2024-11-21-understanding-gravity-a-5-level-guide.md  2024-11-21-understanding-trains-a-5-level-guide.md  2024-11-21-what-are-lichens-and-how-do-they-grow-a-5-level-guide.md  2024-11-21-why-do-dogs-have-wet-noses.md  2024-11-21-why-do-roosters-crow-in-the-morning.md  2024-11-22-common-patterns-in-agentic-workflows-and-prompting.md  2024-11-22-how-to-buy-a-house-a-5-level-guide.md  2024-11-27-premium-and-discount-reporting-of-publicly-issued-debt-securities.md  2024-11-28-how-to-structure-a-musical-a-5-level-guide.md  2024-11-28-what-is-required-to-construct-a-landfill-a-5-level-guide.md  2024-11-29-how-to-train-babies-to-develop-a-circadian-rhythm.md  2024-11-29-welcome-to-jekyll.markdown  2024-12-02-why-are-bananas-yellow.md  2024-12-04-welcome-to-jekyll.markdown  (+5 more)
docs/assets/: style.css
tests/: test_main.py
(+46 files in other folders)
