[project]
name = "fivelevels"
version = "0.1.0"
description = "fivelevels using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
fivelevels = "fivelevels.main:run"
run_crew = "fivelevels.main:run"
train = "fivelevels.main:train"
replay = "fivelevels.main:replay"
test = "fivelevels.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
