[project]
name = "fivelevels"
version = "0.1.0"
description = "fivelevels using crewAI"
authors = [{ name = "Brandon Beidel", email = "bcbeidel@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
kickoff = "fivelevels.main:kickoff"
plot = "fivelevels.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
