[project]
name = "five_level_explainer"
version = "0.1.0"
description = "five_level_explainer using crewAI"
authors = [{ name = "Brandon Beidel", email = "bcbeidel@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
explain = "five_level_explainer.main:main"
kickoff = "five_level_explainer.main:kickoff"
plot = "five_level_explainer.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
